--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django>=1.5.0
-TwitterSearch>=0.78.3
-oauthlib>=0.6.0
-requests>=2.0.0
-requests-oauthlib>=0.4.0
-wsgiref>=0.1.2
-python-memcached>=1.53
+Django==1.5.0
+TwitterSearch==0.78.3
+oauthlib==0.6.0
+requests==2.0.0
+requests-oauthlib==0.4.0
+wsgiref==0.1.2
+python-memcached==1.53
