--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pyyaml==3.10
 requests==2.0.0
 requests-oauthlib==0.4
 scikit-learn==0.14.1
-scipy==
+scipy==0.13.0
 TwitterSearch==0.78.3
 wsgiref==0.1.2
 
